# Client

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Client_wasm.idl  README.md  index.html  updateCanvas.js
ui/: index.html  index0.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
ui/src/: App.svelte  main.js
ui/src/lib/: Client.svelte  Client_deprecated.svelte  ControlDrawer.svelte  DeviceConnect.svelte  DeviceSelect.svelte  Exposure.svelte  ExposureBtn.svelte  Image.svelte  MotorControl.svelte  ROIControl.svelte  StreamBtn.svelte  ZoomControl.svelte
ui/src/lib/MainControls/: Contrast.svelte  Gain.svelte  Gamma.svelte  Offset.svelte  Saturation.svelte  Sharpness.svelte  WBB.svelte  WBG.svelte  WBR.svelte
ui/src/lib/components/: MainControlRange.svelte
ui/src/lib/store/: cameraState.js  device.js  exposure.js  mainControls.js
util/: staticserver.sh
